--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -16,7 +16,7 @@
                 <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "question:question_create" %}'"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="location.href='{% url "domestic:question_create" domestic.pk %}'"> 글쓰기 </button>
         </div>
         <hr>
         <table>
@@ -25,11 +25,11 @@
                 <th width='600' >제목</th>
                 <th>날짜</th>
             </tr>
-            {%for question in questions %}
+            {% for question in questions %}
             <tr>
                 <td class="numbered" align='center'></td>
-                <td><a href="{% url 'question:question_detail' question.pk%}">{{ question.question_title }}</a></td>
-                <td>{{ question.created_at}}</td>
+                <td><a href="{% url 'domestic:question_detail' domestic.pk question.pk %}">{{ question.question_title }}</a></td>
+                <td>{{ question.created_at }}</td>
             </tr>
             {% endfor %}
         </table>
