--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -4,7 +4,7 @@
     <ul>
         <h3>{{ key }}</h3>
         {% for university in val %}
-            <a href="{% url "domestic:wiki" university.pk %}">{{university.home_name}}</a>
+            <a href="{% url 'domestic:wiki' university.pk %}">{{university.home_name}}</a>
         {% endfor %}
     </ul>
     <br>
