TEST-28 Feat: 글 작성 로그인 유저 한정+모달
view에서 로그인 여부 판별, template에서 js 이용해서 페이지 이동

--- a/templates/domestic/question_form.html
+++ b/templates/domestic/question_form.html
@@ -15,7 +15,7 @@
                 <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "domestic:question_create" domestic.pk %}'"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form action ="" method="POST" enctype="multipart/form-data">
@@ -26,4 +26,15 @@
     </div>
 </div>
 
+<script>
+    const canIPost= (is_authenticated)=> {
+        if (is_authenticated == 'False') {
+            alert('로그인이 필요한 서비스입니다.');
+            window.location.href='{% url "login:login" %}';
+        }else{
+            window.location.href='{% url "domestic:question_create" domestic.pk %}';
+        }
+    };
+
+</script>
 {% endblock %}
