--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -16,7 +16,7 @@
                 <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "domestic:question_create" domestic.pk %}'"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <table>
@@ -48,6 +48,16 @@
         }
     }
     numbering(0);
+
+    const canIPost= (is_authenticated)=> {
+        if (is_authenticated == 'False') {
+            alert('로그인이 필요한 서비스입니다.');
+            window.location.href='{% url "login:login" %}';
+        }else{
+            window.location.href='{% url "domestic:question_create" domestic.pk %}';
+        }
+    };
+
 </script>
 
 {% endblock %}
