--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -44,7 +44,11 @@
                 {% endif %}
             </div>
         </div>
-        
+        <br>
+        <div>
+            <h5>내가 쓴 글</h5>
+            <a href="{% url 'login:myquestion' %}" class="btn btn-secondary btn-sm">목록 보러 가기</a>
+        </div>
     </div>
 {% endblock %}
 
