--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -27,7 +27,7 @@
             <table class="table table-bordered">
                 <p class='name'>대학명: {{form.away_name}}</p>
                 <p>국가: {{form.country}}</p>
-                <p>자매 결연 대학:{{form.foreign_sister}}</p>
+                <p>자매 결연 대학:{{form.domestics}}</p>
             </table>
             <input type="submit" value="저장하기" class="btn btn-primary" />
         </form>
