--- a/templates/foreign/sister.html
+++ b/templates/foreign/sister.html
@@ -2,17 +2,27 @@
 
 {% block contents %}
 <div style="width:750px;">
-        <div class="d-flex align-items-center ">
-            <h1>{{univ.away_name}}</h1>
-            <span>자매 결연 대학</span>
-            <h3>{{univ.country}}</h3>
-        </div>
+    <div class="d-flex align-items-center ">
+        <h1>{{univ.away_name}}</h1>
+        <span>자매 결연 대학</span>
+        <h3>{{univ.country}}</h3>
+    </div>
     <hr>
-<div>
-        {%for sister in sisters %}
-         <div><a herf="{ url "domestic:wiki" sister.pk}" >{{sister.home_name}}</a></div>
+    <div>
+        {% for key, val in sisters_dict.items %}
+        <ul>
+            <h3>{{ key }}</h3>
+            {% for sister in val %}
+
+            <a herf="{ url " domestic:wiki" sister.pk}">{{sister.home_name}}</a>
+
+            {% endfor %}
+        </ul>
+        <br>
         {% endfor %}
-  </div>
+    </div>
+
 </div>
+
 
 {% endblock %}
