--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -20,12 +20,15 @@
 <a href="{% url "foreign:review_list" foreign_id %}">목록</a>
 <hr>
 <p>댓글</p>
-<div class="post_{{review.id}}">
+<div class="post_{{review.id}} post">
 {%if all_comment %}
 {%for comment in all_comment %}
 <div class="comment_{{comment.id}} d-flex justify-content-between">
-    {{comment.comment_content}}<div class="btn btn-outline-secondary delete" onclick="onClickDelete({{comment.id}} )">삭제
-    </div>
+    작성자:{{comment.comment_author}} &#160; &#160; 
+    {{comment.comment_content}}
+    {% if request.user == comment.comment_author %}
+    <div class="btn btn-outline-secondary delete " onclick="onClickDelete({{comment.id}} )">삭제</div>
+    {%endif%}
 </div>
 {%endfor%}
 {%endif%}
@@ -33,7 +36,7 @@
 
 <form action="./comment_create/" method="POST">
     {% csrf_token %}
-    <input type="text" name="comment_content" id="comment_{{review.id}}" value='댓글달기...' style="width: 80%;"/>
+    <input type="text" name="comment_content" id="comment_{{review.id}}" placeholder='댓글달기...' style="width: 80%;"/>
     <div class="btn btn-outline-dark submit" onclick="onClickComment({{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
         submit
     </div>
@@ -50,20 +53,42 @@
             },
             body: JSON.stringify({post_id:post_id,comment_content:comment_content})
         }); 
-        const {post_id:id,comment_content:content}= await res.json();        
-        commentHandleResponse(id,content);
+        const {post_id:id,comment_content:content,comment_id:c_id}= await res.json();        
+        commentHandleResponse(id,content,c_id);
     };
 
-    const commentHandleResponse=(post_id,comment_content,comment_id)=>{
-    
+    const commentHandleResponse=(post_id,comment_content,comment_id) => {
+        console.log(comment_id)
         const element=document.querySelector(`.post_${post_id}`)
         const newDiv = document.createElement('div')
         newDiv.className = `comment_${comment_id} d-flex justify-content-between`;
-        newDiv.innerHTML = `${comment_content}<div class="btn btn-outline-secondary delete" onclick="onClickDelete(${comment_id} )">삭제</div>`
+        newDiv.innerHTML = `작성자:{{request.user}} &#160; &#160; ${comment_content}<div class="btn btn-outline-secondary delete" onclick="onClickDelete(${comment_id})">삭제</div>`
         element.appendChild(newDiv)
         //댓글 입력창 비워주기
         const input_content = document.querySelector(`#comment_${post_id}`)
         input_content.value = null
+    }
+    
+    //댓글 삭제
+    const onClickDelete= async(comment_id) => {  
+        const url = './comment_delete/';
+        const res= await fetch(url,{        
+            method: 'POST',
+            headers:{
+            'Content-Type': 'application/x-www-form-urlencoded'
+            },
+            body: JSON.stringify({comment_id:comment_id})
+        }); 
+        const {comment_id:id} = await res.json();        
+        deleteHandleResponse(id);
+    };
+
+    const deleteHandleResponse = (comment_id)=>{
+    
+        const element = document.querySelector(`.comment_${comment_id}`)
+        const element_comment = element.closest('.post')
+        console.log(element_comment)
+        element_comment.removeChild(element)
     }
 
 </script>
