--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -8,58 +8,58 @@
             <h3>{{univ.country}}</h3>
         </div>
     </div>
-
+    <hr>
     <div>
         <div>
             <p>1. 파견로의 지원방법</p>
-            <pre>{{univ.away_apply}}</pre>
-            {%if user.is_authenticated %}                              <!--textarea에 입력한대로 보여주는 pre tag-->
-            <div><a href="{% url "foreign:wiki_edit_apply" univ.pk %}">수정</a></div>
-            {%endif%}
+            <pre>{{univ.away_apply}}</pre>  <!--textarea에 입력한대로 보여주는 pre tag-->
+            <button onclick="Edit('{{ user.is_authenticated }}','apply')">수정</button>
             <div>
                 <p>2. 필요 어학 점수</p>
                 <pre>{{univ.language_score}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_language_score" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','language_score')">수정</button>
             </div>
             <div>
                 <p>3. 수강신청방법</p>
                 <pre>{{univ.course_enroll}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_course_enroll" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','course_enroll')">수정</button>
             </div>
             <div>
                 <p>4. 기숙사 정보</p>
                 <pre>{{univ.accommodation}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_accommodation" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','accommodation')">수정</button>
             </div>
             <div>
                 <p>5. 학교 분위기</p>
                 <pre>{{univ.atmosphere}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_atmosphere" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','atmosphere')">수정</button>
             </div>
             <div>
                 <p>6. 동아리</p>
                 <pre>{{univ.club}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_club" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','club')">수정</button>
             </div>
             <div>
                 <p>7. 장학금</p>
                 <pre>{{univ.away_scholarship}}</pre>
-                {%if user.is_authenticated %}
-                <div><a href="{% url "foreign:wiki_edit_away_scholarship" univ.pk %}">수정</a></div>
-                {%endif%}
+                <button onclick="Edit('{{ user.is_authenticated }}','away_scholarship')">수정</button>
             </div>
         </div>
     </div>
 </div>
 
+<script>
+    function Edit(is_authenticated,str){
+    if(is_authenticated == 'False') {
+            alert('로그인이 필요한 서비스입니다.');
+            window.location.href='{% url "login:login" %}';
+        }else{
+           
+            var view=`/foreign/wiki/edit_${str}/`           //url 연결
+        
+            window.location.href=view+'{{univ.pk}}'
+
+        }
+    }
+</script>
 {%endblock%}
