--- a/templates/foreign/question_form.html
+++ b/templates/foreign/question_form.html
@@ -7,7 +7,7 @@
             <h1>{{univ.away_name}}</h1>
             <span>QnA</span>
             <h3>{{univ.country}}</h3>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "foreign:question_create" foreign_id%}'"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form action ="" method="POST" enctype="multipart/form-data">
