--- a/templates/country/country_base.html
+++ b/templates/country/country_base.html
@@ -1,19 +1,21 @@
+{% extends "base.html" %}
 
-
-
+{% block content %}
+    
     <div class="d-flex justify-content-evenly ">
         <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center"
             style="width:200px; height:150px;">
             <ul>
                 <li><a href="{% url "country:country_wiki" country.pk%}">위키</a></li>
-                <li><a href="{% url "country:country_qna" country.pk%}">QnA</a></li>
+                <li><a href="{% url "country:question_list" country.pk%}">QnA</a></li>
                 <li><a href="{% url "country:country_univ" country.pk%}">학교 목록</a></li>
             </ul>
         </div>
         <div style="width:750px;">
             
-    {% block contents %}
-    {% endblock %}
+            {% block contents %}
+            {% endblock %}
         </div>
     </div>
 
+{% endblock %}
