--- a/templates/country/question_form.html
+++ b/templates/country/question_form.html
@@ -1,20 +1,36 @@
-{%extends "country/country_base.html"%}
-{% block contents %}
+{%extends "country/country_base.html"%} {% block contents %}
 
-    
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
-            <h1>{{country.country_name}}</h1>
-            <span>QnA</span>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "foreign:question_create" foreign_id%}'"> 글쓰기 </button>
-        </div>
-        <hr>
-        <form action ="" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{form.as_p}}
-            <div class="d-flex justify-content-end"><input type="submit" value="저장하기"/></div>
-        </form>
+<div style="width: 750px">
+  <div class="d-flex justify-content-between">
+    <div class="d-flex align-items-center">
+      <h1>{{ country.country_name }}</h1>
+      <span>QnA</span>
     </div>
+    <button
+      class="btn btn-sm btn-border"
+      onclick="canIPost('{{ is_authenticated }}')"
+    >
+      글쓰기
+    </button>
+  </div>
+  <hr />
+  <form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %} {{ form.as_p }}
+    <div class="d-flex justify-content-end">
+      <input type="submit" value="저장하기" />
+    </div>
+  </form>
+</div>
 
+<script>
+  const canIPost = (is_authenticated) => {
+    if (is_authenticated == "False") {
+      alert("로그인이 필요한 서비스입니다.");
+      window.location.href = '{% url "login:test" %}';
+    } else {
+      window.location.href = '{% url "country:question_create" country.pk %}';
+    }
+  };
+</script>
 
 {% endblock %}
