--- a/templates/domestic/wiki_edit.html
+++ b/templates/domestic/wiki_edit.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="d-flex justify-content-evenly ">
+    <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center" style="width:200px; height:150px;">
+        <ul>
+            <li><a href="{% url 'domestic:sister_list' univ.pk %}">자매 결연 대학</a></li>
+            <li><a href="{% url 'domestic:wiki' univ.pk %}">위키</a></li>
+            <li><a href="{% url 'domestic:question_list' univ.pk %}">QnA</a></li>
+            <li><a href="{% url 'domestic:credit_list' univ.pk %}">파견교별 학점컷</a></li>
+        </ul>
+    </div>
+    <div style="width:750px;">
+        <div class="d-flex justify-content-between ">
+            <div class="d-flex align-items-center ">
+                <h1>{{ univ.home_name }}</h1>
+                <span>Wiki</span>
+            </div>
+        </div>
+        <hr>
         <form action="" method="POST" enctype="multipart/form-data" class="table">
             {% csrf_token %}
             {% for field in form %}
@@ -24,4 +41,8 @@
             {%endif%}
             {% endfor %}
         </form>
+    </div>
+
+</div>
+        
 {% endblock %}
