--- a/templates/domestic/wiki_edit.html
+++ b/templates/domestic/wiki_edit.html
@@ -21,11 +21,11 @@
             {% csrf_token %}
             {% for field in form %}
 
-            {%if field.name == 'away_apply'%} <p>1.지원 방법</p>  {%endif%}
-            {%if field.name == 'language_score'%}<p>2.필요 서류</p>   {%endif%}
-            {%if field.name == 'course_enroll'%} <p>3.수학 가능 학기</p>  {%endif%}
-            {%if field.name == 'accommodation'%} <p> 4.교내 장학금 정보</p> {%endif%}
-            {%if field.name == 'atmosphere'%} <p>5.유학생 보험 준비</p> {%endif%}
+            {%if field.name == 'home_apply'%} <p>1.지원 방법</p>  {%endif%}
+            {%if field.name == 'home_document'%}<p>2.필요 서류</p>   {%endif%}
+            {%if field.name == 'semester'%} <p>3.수학 가능 학기</p>  {%endif%}
+            {%if field.name == 'home_scholarship'%} <p> 4.교내 장학금 정보</p> {%endif%}
+            {%if field.name == 'insurance'%} <p>5.유학생 보험 준비</p> {%endif%}
             
             {% if btn == forloop.counter%}
             <div class="form-group">
