TEST-13 Feat: 내가 쓴 글 보기

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="d-flex">
-            <a href="{% url 'login:user_main' %}" class="col-2 btn text-center"><span>홈</span></a>
+            <a href="{% url 'login:user_main' %}" class="col-2 btn text-center"><span>UNI CONNECT</span></a>
             <div class="d-flex justify-content-end col-7">
                 <div>
                     <a class="btn" href="{% url 'domestic:univ_list' %}">국내대학별</a>
