--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="d-flex justify-content-center mt-5">
+<div class="d-flex flex-column align-items-center text-center mt-5">
     <div>
-        <h1>교환학생 정보교환 플랫폼</h1>
+        <h1>🌏UNI CONNECT</h1>
+        <h4 class="mt-4">교환학생 정보교환 플랫폼</h4>
+        <p class="mt-3 mb-1">인생의 한 번 뿐인 교환학생,.</p>
+        <p class="mb-1">하지만 준비 없이는 불안하고 몸이 고생하죠.</p> 
+        <p>유니 커넥트에서 필요한 정보들을 찾아보고 경험을 공유하세요!</p>
+        
     </div>
 </div>
 {% endblock %}
