--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -1,4 +1,4 @@
-{%extends "country/country_base.html"%}
+{%extends "country/country_base.html"%} 
 {% block contents %}
 
     
@@ -41,7 +41,7 @@
         const canIPost= (is_authenticated)=> {
             if (is_authenticated == 'False') {
                 alert('로그인이 필요한 서비스입니다.');
-                window.location.href='{% url "login:test" %}';
+                window.location.href='{% url "login:login" %}';
             }else{
                 window.location.href='{% url "country:question_create" country.pk %}';
             }
