TEST:8 Feat: 국가로 이동

--- a/templates/foreign/question_list.html
+++ b/templates/foreign/question_list.html
@@ -8,7 +8,7 @@
             <div class="d-flex align-items-center ">
                 <h1>{{univ.away_name}}</h1>
                 <span>QnA</span>
-                <h3>{{univ.country}}</h3>
+                <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
             </div>
             <button class="btn btn-sm btn-border" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
         </div>
