--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -5,7 +5,7 @@
         <div class="d-flex align-items-center ">
             <h1>{{univ.away_name}}</h1>
             <span>위키</span>
-            <h3>{{univ.country}}</h3>
+            <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
         </div>
     </div>
     <hr>
