--- a/templates/foreign/comment_form.html
+++ b/templates/foreign/comment_form.html
@@ -14,7 +14,7 @@
         <div>
             <div class="d-flex justify-content-between">
                 <h4>{{ question.question_title }}</h4>
-                <p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+                <p>작성자: {{ question.author.nickname}} 작성 시간: {{ question.created_at }}</p>
             </div>
             <p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
             <p>
