--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -1,60 +1,143 @@
 {%extends "base.html"%}
+
+{% block style %}
+    <style>
+        .autocomplete {
+            position: relative;
+            display: inline-block;
+        }
+        .autocomplete-items {
+            position: absolute;
+            border: 1px solid #d4d4d4;
+            border-bottom: none;
+            border-top: none;
+            z-index: 99;
+            top: 100%;
+            left: 0;
+            right: 0;
+        }
+        .autocomplete-items div {
+            padding: 10px;
+            cursor: pointer;
+            background-color: #fff;
+            border-bottom: 1px solid #d4d4d4;
+        }
+        .autocomplete-items div:hover {
+            background-color: #e9e9e9;
+        }
+        .autocomplete-active {
+            background-color: dodgerblue !important;
+            color: #fff;
+        }
+    </style>
+{% endblock %}
+
 {%block content%}
-<div class='d-flex justify-content-evenly '>
-    <div class='foreign_list' style="width: 55%;">
-        <form action="" method='GET' >
-            학교명: <input type="search" name='query' style="width: 65%;">
-            <input type="submit" value='검색'>
-        </form>
-
-
-        {% for key, val in univ_dict.items %}
-        <ul>
-            <h3>{{ key }}</h3>
-            {% for univ in val %}
-
-            <div class="btn"  onclick="onClickUniv('{{univ}}')">{{univ}}</div>
-            <br/>
-
-            {% endfor %}
-        </ul>
-        <br>
-        {% endfor %}
-    </div>
-    <div style="width: 30%;">
-        <form action="" method="post" enctype="multipart/form-data" class="form" >
-            {% csrf_token %}
-            <table class="table table-bordered">
-                <p class='name'>대학명: {{form.away_name}}</p>
-                <p>국가: {{form.country}}</p>
-                <p>자매 결연 대학:{{form.domestics}}</p>
-            </table>
-            <input type="submit" value="저장하기" class="btn btn-primary" />
-        </form>
-    </div>
+<div>
+    <h5>파견교 추가</h5>
+    <hr />
+    <form autocomplete="off">
+        <h5>대학 검색</h5>
+        <div class="autocomplete">
+            <span>해외학교명 : </span>
+            <input style="width: 300px;" type="text" id="myInput" name="newUniversity" placeholder="해외 학교명" autocomplete="off">
+            <input type="submit">
+        </div>
+    </form>
+    <form method="POST" enctype="multipart/form-data" class="form" >
+        {% csrf_token %}
+        <input name="away_name" style="display: none;" id="formUniversity">
+        <p>국가: {{form.country}}</p>
+        <p>자매 결연 대학:{{form.domestics}}</p>
+        <input type="submit" value="저장하기" class="btn btn-primary" />
+    </form>
 </div>
 
 <script>
-    const Name = document.querySelector('.name input')
-    Name.size = "40"
-    const onClickUniv = async (foreign_name) => {
-        const url = '/foreign/get_foreign/';
-        const res = await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: JSON.stringify({ foreign_name: foreign_name})
+    const endpoint = 'https://raw.githubusercontent.com/Joanne19-drive/Exchange_Platform/develop/config/univ.json'
+    const universities = [];
+    const university_names = [];
+
+    fetch(endpoint)
+    .then(blob => blob.json())
+    .then(data => universities.push(...data))
+    .then(function() {
+        for(var i = 0; i < universities.length; i++) {
+        var university = universities[i];
+        university_names.push(university.name);}
+    })
+    
+
+    function autocomplete(inp, arr) {
+        var currentFocus;
+        inp.addEventListener("input", function(e) {
+            var a, b, i, val = this.value;
+            closeAllLists();
+            if (!val) { return false;}
+            currentFocus = -1;
+            a = document.createElement("div");
+            a.setAttribute("id", this.id + "autocomplete-list");
+            a.setAttribute("class", "autocomplete-items");
+            this.parentNode.appendChild(a);
+            for (i = 0; i < arr.length; i++) {
+                if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+                b = document.createElement("div");
+                b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+                b.innerHTML += arr[i].substr(val.length);
+                b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+                    b.addEventListener("click", function(e) {
+                    inp.value = this.getElementsByTagName("input")[0].value;
+                    const addUniversity = document.querySelector("#formUniversity");
+                    addUniversity.value = this.getElementsByTagName("input")[0].value;
+                    closeAllLists();
+                });
+                a.appendChild(b);
+                }
+            }
         });
-        const { foreign_name: name } = await res.json();
-        ForeignHandleResponse(name);
-    };
-
-    const ForeignHandleResponse = (foreign_name) => {
-
-        const element = document.querySelector('.name input');
-        element.value=foreign_name
+        
+        inp.addEventListener("keydown", function(e) {
+            var x = document.getElementById(this.id + "autocomplete-list");
+            if (x) x = x.getElementsByTagName("div");
+            if (e.keyCode == 40) {
+                currentFocus++;
+                addActive(x);
+            } else if (e.keyCode == 38) { 
+                currentFocus--;
+                addActive(x);
+            } else if (e.keyCode == 13) {
+                e.preventDefault();
+                if (currentFocus > -1) {
+                    if (x) x[currentFocus].click();
+                }
+            }
+        });
+        function addActive(x) {
+            if (!x) return false;
+            removeActive(x);
+            if (currentFocus >= x.length) currentFocus = 0;
+            if (currentFocus < 0) currentFocus = (x.length - 1);
+            x[currentFocus].classList.add("autocomplete-active");
+        }
+        function removeActive(x) {
+            for (var i = 0; i < x.length; i++) {
+            x[i].classList.remove("autocomplete-active");
+            }
+        }
+        function closeAllLists(elmnt) {
+            var x = document.getElementsByClassName("autocomplete-items");
+            for (var i = 0; i < x.length; i++) {
+                if (elmnt != x[i] && elmnt != inp) {
+                    x[i].parentNode.removeChild(x[i]);
+                }
+            }
+        }
+        document.addEventListener("click", function (e) {
+            closeAllLists(e.target);
+        });
     }
-
+</script>
+<script>
+    autocomplete(document.getElementById("myInput"), university_names);
 </script>
 {%endblock%}
