--- a/templates/foreign/sister.html
+++ b/templates/foreign/sister.html
@@ -7,7 +7,7 @@
         <span>자매 결연 대학</span>
         <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
     </div>
-    <a href="{% url "foreign:create_sister" univ.pk%}">학교 추가</a>
+    <button class="btn btn-sm btn-border btn-primary" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교 추가</button>
     <hr>
     <div>
         {% for key, val in sisters_dict.items %}
