TEST-2 TEST-8 TEST-9 TEST-12 Docs: 그냥 다 수정
question detail에 아이디 대신 닉네임 & foriegn에서 create sister할 때 확인 버튼이 필요하지 않아서 지웠음

--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -5,7 +5,7 @@
     <div>
         <h1>🌏UNI CONNECT</h1>
         <h4 class="mt-4">교환학생 정보교환 플랫폼</h4>
-        <p class="mt-3 mb-1">인생의 한 번 뿐인 교환학생,.</p>
+        <p class="mt-3 mb-1">인생의 한 번 뿐인 교환학생,</p>
         <p class="mb-1">하지만 준비 없이는 불안하고 몸이 고생하죠.</p> 
         <p>유니 커넥트에서 필요한 정보들을 찾아보고 경험을 공유하세요!</p>
         
