--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -41,7 +41,7 @@
         <div class="autocomplete">
             <span>해외학교명 : </span>
             <input style="width: 300px;" type="text" id="myInput" name="newUniversity" placeholder="해외 학교명" autocomplete="off">
-            <input type="submit">
+            <input type="submit" value="확인" style="display: none;">
         </div>
     </form>
     <form method="POST" enctype="multipart/form-data" class="form" >
